--- a/src/view/facture.fxml
+++ b/src/view/facture.fxml
@@ -1,69 +1,72 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Scene?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="529.0" prefWidth="648.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
-   <top>
-      <GridPane BorderPane.alignment="CENTER">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <Label prefHeight="18.0" prefWidth="268.0" text="Client :">
-               <font>
-                  <Font name="System Bold" size="14.0" />
-               </font>
-            </Label>
-            <Label prefHeight="18.0" prefWidth="230.0" text="Appareil  :" textAlignment="CENTER" GridPane.rowIndex="1">
-               <font>
-                  <Font name="System Bold" size="14.0" />
-               </font>
-            </Label>
-            <ComboBox prefHeight="26.0" prefWidth="272.0" GridPane.columnIndex="1" />
-            <ComboBox prefHeight="26.0" prefWidth="272.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-         </children>
-      </GridPane>
-   </top>
-   <center>
-      <TableView prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-        <columns>
-          <TableColumn prefWidth="75.0" text="C1" />
-          <TableColumn prefWidth="75.0" text="C2" />
-            <TableColumn prefWidth="75.0" text="C2" />
-            <TableColumn prefWidth="75.0" text="C2" />
-            <TableColumn prefWidth="75.0" text="C2" />
-            <TableColumn prefWidth="75.0" text="C2" />
-        </columns>
-      </TableView>
-   </center>
-   <bottom>
-      <GridPane BorderPane.alignment="CENTER">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <Label prefHeight="18.0" prefWidth="248.0" text="Label" />
-         </children>
-      </GridPane>
-   </bottom>
-</BorderPane>
+<Scene xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+    <AnchorPane prefHeight="660.0" prefWidth="742.0">
+      <children>
+         <Text layoutX="305.0" layoutY="63.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Facture" underline="true">
+            <font>
+               <Font name="System Bold" size="30.0" />
+            </font>
+         </Text>
+         <Text layoutX="69.0" layoutY="108.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Client:" underline="true">
+            <font>
+               <Font name="System Bold Italic" size="18.0" />
+            </font>
+         </Text>
+         <Text layoutX="69.0" layoutY="155.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Appareils:" underline="true">
+            <font>
+               <Font name="System Bold Italic" size="18.0" />
+            </font>
+         </Text>
+         <ComboBox layoutX="165.0" layoutY="93.0" prefHeight="26.0" prefWidth="509.0" promptText="Nom du client..." />
+         <Text layoutX="59.0" layoutY="222.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Détails de la réparation:" underline="true">
+            <font>
+               <Font name="System Bold Italic" size="18.0" />
+            </font>
+         </Text>
+         <TableView layoutX="59.0" layoutY="245.0" prefHeight="191.0" prefWidth="642.0">
+           <columns>
+             <TableColumn prefWidth="144.79995346069336" text="Piéce" />
+             <TableColumn prefWidth="80.80006408691406" text="Prix Unitaire" />
+               <TableColumn prefWidth="113.5999755859375" text="Quantité" />
+               <TableColumn prefWidth="109.5999755859375" text="Prix Total" />
+               <TableColumn prefWidth="194.4000244140625" text="Catégorie" />
+           </columns>
+         </TableView>
+         <Button layoutX="59.0" layoutY="584.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="298.0" text="Afficher Facture" textFill="#169e4f">
+            <font>
+               <Font name="System Bold" size="16.0" />
+            </font>
+         </Button>
+         <Text layoutX="57.0" layoutY="553.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Total TTC:" underline="true">
+            <font>
+               <Font name="System Bold Italic" size="18.0" />
+            </font>
+         </Text>
+         <Text layoutX="60.0" layoutY="511.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TVA:" underline="true">
+            <font>
+               <Font name="System Bold Italic" size="18.0" />
+            </font>
+         </Text>
+         <Text layoutX="60.0" layoutY="469.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Total HT:" underline="true">
+            <font>
+               <Font name="System Bold Italic" size="18.0" />
+            </font>
+         </Text>
+         <ComboBox layoutX="165.0" layoutY="136.0" prefHeight="26.0" prefWidth="509.0" promptText="Appareil(s) correspondante(s)..." />
+         <Button layoutX="404.0" layoutY="584.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="298.0" text="Imprimer" textFill="#222994">
+            <font>
+               <Font name="System Bold" size="16.0" />
+            </font>
+         </Button>
+      </children></AnchorPane>
+</Scene>
